# metrics-gen

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
src/: config.rs  execution.rs  generate.rs  main.rs  metric_file.rs  remote_write.proto  runner.rs  upload.rs  visitor.rs
